syntax = "proto3";
package proto;
option go_package = "github.com/zhiting-tech/smartassistant/pkg/datatunnel/proto";

service DatatunnelController {
    rpc ControlStream(stream ControlStreamData) returns (stream ControlStreamData);
}

message ControlStreamData {
    int32  Version = 1;
    string Action = 2;
    string ActionValue = 3;
}